--- a/example/intl/intl_de.arb
+++ b/example/intl/intl_de.arb
@@ -1,16 +1,16 @@
 {
   "@@locale": "de",
-  "t975145968": "Flutter Demo Home Page",
+  "t975145968": "Flutter Demo Startseite",
   "@t975145968": {
     "description": "Flutter Demo Home Page",
     "placeholders": {}
   },
-  "t495287403": "{value, plural, =0{You have not pushed the button yet.} =1{You pushed the button one} other{You have pushed the button {value} times.}}",
+  "t495287403": "{value, plural, =0{Du hast die Schaltfläche noch nicht betätigt.} =1{Du hast die Schaltfläche ein Mal betätigt.} other{Du hast die Schaltfläche {value} Mal betätigt.}}",
   "@t495287403": {
     "description": "You have pushed the button {value} times.",
     "placeholders": {
       "value": {}
     }
   },
-  "@@last_modified": "2022-03-23T15:14:36.442710"
+  "@@last_modified": "2022-03-23T15:39:33.828322"
 }
